# HPC_FinalProject

./: .gitignore  DoDo  Hello.c  Makefile  README.md
analysis/: analysis.md
lib/: Iteration.h
report/: CMakeLists.txt  HPCFinalProjectReport.tex  Makefile  gplot.py  logo-sustech.pngZone.Identifier
result/: correctScript  explicitJob1  explicitJob2  explicitJob3  explicitJob4  implicitJob2  implicitJob3  implicitJob4  implictJob1
src/: CMakeLists.txt  Makefile  callgrind.out.24416  callgrind.out.24417  explicitMethod  explicitMethod.c  explicitMethod.h5  implicitMethod  implicitMethod.c  implicitMethod.h5  main  main.c
